added initial dice display when website first opened

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <h1>Dice Roller</h1>
     </header>
     <main>
-        
+        <section id="dice-container">
+            
+        </section>
+        <button id="btn">Roll Dice</button>
     </main>
     <script src="./assets/js/script.js"></script>
 </body>
