changed function of dice showing up. instead of if, it changed the source of image in HTML page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     </header>
     <main>
         <section id="dice-container">
-            
+            <img src="./assets/img/dice-1.png" alt="dice-one" id="dice-1">
+            <img src="./assets/img/dice-1.png" alt="dice-one" id="dice-2">
         </section>
-        <button id="btn">Roll Dice</button>
+        <div id="btn-group">
+            <button id="btn">Roll Dice</button>
+        </div>
+        
     </main>
     <script src="./assets/js/script.js"></script>
 </body>
