added feature for snake eyes and such

--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
             <img src="./assets/img/dice-1.png" alt="dice-one" id="dice-1">
             <img src="./assets/img/dice-1.png" alt="dice-one" id="dice-2">
         </section>
-        <div id="btn-group">
+        <section class="snake-eyes hidden">
+            <p>You got snake eyes!</p>
+        </section>
+        <section class="total-wrapper">
+            <p>The total of the dice are: <span id="dice-total"></span></p>
+        </section>
+        <div class="btn-wrapper">
             <button id="btn">Roll Dice</button>
         </div>
-        
     </main>
     <script src="./assets/js/script.js"></script>
 </body>
