snake eyes is only when you get a pair of ones, so i changed the text under header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Dice Roller</h1>
-        <p>If the dice turn blue, you got snake eyes!</p>
+        <p>If the dice turn blue, you got doubles!</p>
     </header>
     <main>
         <section id="dice-container">
